@@ -304,7 +304,9 @@ calculator engine.  It allows you to run the currently selected program or to
 interrupt the current calculation.  You can also look at the full expression of
 the last answer (useful if the last answer was too large to fit onto the
 console), or you can view a listing of the values of all user defined
-variables.  Finally it allows plotting functions using a user friendly dialog box.
+variables.  You can also monitor user variables, which is especially useful
+while a long calculation is running, or to debug a certain program.
+		    Finally the <guilabel>Calculator</guilabel> allows plotting functions using a user friendly dialog box.
 	   </para>
 	   <para>
 		   The <guilabel>Examples</guilabel> menu is a list of example
@@ -974,7 +976,7 @@ GEL has a number of built-in &lsquo;variables&rsquo;, such as
 they cannot be assigned new values.
 There are a number of other built-in variables.
 See <xref linkend="genius-gel-function-list-constants" /> for a full list.  Note that <varname>i</varname> is not by default
-the square root of negative one (the imaginary number), and is undefined.  If you wish to write the imaginary number you need to
+the square root of negative one (the imaginary number), and is undefined to allow its use as a counter.  If you wish to write the imaginary number you need to
 use <userinput>1i</userinput>.
         </para>
       </sect2>
@@ -1162,7 +1164,7 @@ the code if it is executed too often as there is one more operator involved.
       <para>
 	      GEL is similar to other scripting languages in that <literal>#</literal> denotes
 	      a comments, that is text that is not meant to be evaluated.  Everything beyond the
-	      pound sign till the end of line will just be ignored.  So
+	      pound sign till the end of line will just be ignored.  For example,
 <programlisting># This is just a comment
 # every line in a comment must have its own pond sign
 # in the next line we set x to the value 123
