@@ -1,3 +1,7 @@
+Thu Oct 02 23:28:29 2014  Jiri (George) Lebl <jirka@5z.com>
+
+	* help/C/genius.xml: slight update
+
 Thu Oct 02 19:34:55 2014  Jiri (George) Lebl <jirka@5z.com>
 
 	* help/C/figures/*.png, help/C/genius.xml: requantize and recompress
